Bugfix: Adjust z-index of sort list and suggestion list container

--- a/app/src/components/NoFeedbackAlert/_no-feedback-alert.scss
+++ b/app/src/components/NoFeedbackAlert/_no-feedback-alert.scss
@@ -11,7 +11,7 @@
     }
 
     @include desktop() {
-        margin-top: 88px;
+        margin-top: 127px;
         margin-left: 271px;
         position: fixed;
         width: calc(1110px - 271px);
