--- a/app/src/components/SuggestionList/_suggestion-list.scss
+++ b/app/src/components/SuggestionList/_suggestion-list.scss
@@ -8,6 +8,6 @@
         top: 79px;
         bottom: 0;
         overflow: scroll;
-        z-index: 5;
+        z-index: 0;
     }
 }
