--- a/app/src/components/Toolbar/_toolbar.scss
+++ b/app/src/components/Toolbar/_toolbar.scss
@@ -25,6 +25,7 @@
         margin-left: 271px;
         width: 100%;
         max-width: calc(1110px - 271px);
+        z-index: 2;
     }
 }
 
